-
Type:
Bug
-
Status: Resolved
-
Priority:
Blocker
-
Resolution: Fixed
-
Affects Version/s: Impala 2.7.0
-
Fix Version/s: Impala 2.7.0
-
Component/s: Backend
-
Labels:
-
Target Version:
The exhaustive release build failed because impalad crashed. The core dump says
#5 <signal handler called> #6 _M_data (this=0xc9efcce8, __k=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/gcc-4.9.2/include/c++/4.9.2/bits/basic_string.h:293 #7 _M_rep (this=0xc9efcce8, __k=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/gcc-4.9.2/include/c++/4.9.2/bits/basic_string.h:301 #8 size (this=0xc9efcce8, __k=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/gcc-4.9.2/include/c++/4.9.2/bits/basic_string.h:725 #9 compare (this=0xc9efcce8, __k=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/gcc-4.9.2/include/c++/4.9.2/bits/basic_string.h:2246 #10 operator< <char, std::char_traits<char>, std::allocator<char> > (this=0xc9efcce8, __k=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/gcc-4.9.2/include/c++/4.9.2/bits/basic_string.h:2590 #11 operator() (this=0xc9efcce8, __k=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/gcc-4.9.2/include/c++/4.9.2/bits/stl_function.h:371 #12 _M_lower_bound (this=0xc9efcce8, __k=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/gcc-4.9.2/include/c++/4.9.2/bits/stl_tree.h:1261 #13 std::_Rb_tree<std::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::pair<std::basic_string<char, std::char_traits<char>, std::allocator<char> > const, impala::RuntimeProfile::Counter*>, std::_Select1st<std::pair<std::basic_string<char, std::char_traits<char>, std::allocator<char> > const, impala::RuntimeProfile::Counter*> >, std::less<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, std::allocator<std::pair<std::basic_string<char, std::char_traits<char>, std::allocator<char> > const, impala::RuntimeProfile::Counter*> > >::find (this=0xc9efcce8, __k=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/gcc-4.9.2/include/c++/4.9.2/bits/stl_tree.h:1913 #14 0x0000000000bbe9f6 in find (this=0xc9efcce8, total=44822200) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/gcc-4.9.2/include/c++/4.9.2/bits/stl_map.h:860 #15 impala::RuntimeProfile::ComputeTimeInProfile (this=0xc9efcce8, total=44822200) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/util/runtime-profile.cc:341 #16 0x0000000000bbec41 in impala::RuntimeProfile::ComputeTimeInProfile (this=0xc9efcce8, total=44822200) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/util/runtime-profile.cc:367 #17 0x0000000000bbedd1 in impala::RuntimeProfile::ComputeTimeInProfile (this=0x1409afc0) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/util/runtime-profile.cc:330 #18 0x0000000000bc16d4 in impala::RuntimeProfile::UpdateAverage (this=0x1409afc0, other=0xf048d00) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/util/runtime-profile.cc:209 #19 0x0000000000d9444b in impala::Coordinator::UpdateAverageProfile (this=) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/runtime/coordinator.cc:1684 #20 0x0000000000da2601 in impala::Coordinator::UpdateFragmentExecStatus (this=0xadc4000, params=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/runtime/coordinator.cc:1549 #21 0x0000000000abe80f in impala::ImpalaServer::ReportExecStatus (this=0x7579100, return_val=..., params=...) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/service/impala-server.cc:1112 #22 0x0000000000cf28cc in impala::ImpalaInternalServiceProcessor::process_ReportExecStatus (this=0x82c6220, seqid=0, iprot=) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/generated-sources/gen-cpp/ImpalaInternalService.cpp:1451 #23 0x0000000000cebd89 in impala::ImpalaInternalServiceProcessor::dispatchCall (this=0x82c6220, iprot=0x8b037a0, oprot=0x8b02f90, fname=..., seqid=0, callContext=0xb2672d40) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/generated-sources/gen-cpp/ImpalaInternalService.cpp:1370 #24 0x000000000081686c in apache::thrift::TDispatchProcessor::process (this=0x82c6220, in=..., out=..., connectionContext=0xb2672d40) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/thrift-0.9.0-p8/include/thrift/TDispatchProcessor.h:121 #25 0x0000000001b3921f in apache::thrift::server::TThreadedServer::Task::run() () #26 0x0000000000a06359 in impala::ThriftThread::RunRunnable (this=) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/rpc/thrift-thread.cc:61 #27 0x0000000000a06db2 in operator() (function_obj_ptr=) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0/include/boost/bind/mem_fn_template.hpp:280 #28 operator()<boost::_mfi::mf2<void, impala::ThriftThread, boost::shared_ptr<apache::thrift::concurrency::Runnable>, impala::Promise<long unsigned int>*>, boost::_bi::list0> (function_obj_ptr=) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0/include/boost/bind/bind.hpp:392 #29 operator() (function_obj_ptr=) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0/include/boost/bind/bind_template.hpp:20 #30 boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf2<void, impala::ThriftThread, boost::shared_ptr<apache::thrift::concurrency::Runnable>, impala::Promise<unsigned long>*>, boost::_bi::list3<boost::_bi::value<impala::ThriftThread*>, boost::_bi::value<boost::shared_ptr<apache::thrift::concurrency::Runnable> >, boost::_bi::value<impala::Promise<unsigned long>*> > >, void>::invoke (function_obj_ptr=) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0/include/boost/function/function_template.hpp:153 #31 0x0000000000be05e7 in operator() (name=) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0/include/boost/function/function_template.hpp:767 #32 impala::Thread::SuperviseThread (name=) at /data/jenkins/workspace/impala-umbrella-build-and-test/repos/Impala/be/src/util/thread.cc:315 #33 0x0000000000be0ef4 in operator()<void (*)(const std::basic_string<char>&, const std::basic_string<char>&, boost::function<void()>, impala::Promise<long int>*), boost::_bi::list0> (this=0xb511000) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0/include/boost/bind/bind.hpp:457 #34 operator() (this=0xb511000) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0/include/boost/bind/bind_template.hpp:20 #35 boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&, const std::basic_string<char, std::char_traits<char>, std::allocator<char> >&, boost::function<void()>, impala::Promise<long int>*), boost::_bi::list4<boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<std::basic_string<char, std::char_traits<char>, std::allocator<char> > >, boost::_bi::value<boost::function<void()> >, boost::_bi::value<impala::Promise<long int>*> > > >::run(void) (this=0xb511000) at /data/jenkins/workspace/impala-umbrella-build-and-test/Impala-Toolchain/boost-1.57.0/include/boost/thread/detail/thread.hpp:116 #36 0x0000000000e3fe6a in thread_proxy () #37 0x0000003d71807851 in start_thread () from /lib64/libpthread.so.0 #38 0x0000003d714e894d in clone () from /lib64/libc.so.6
There is more information in the build artifacts at http://sandbox.jenkins.cloudera.com/job/impala-umbrella-build-and-test/1793/
I don't see any recent commits related to this code.
- is related to
-
IMPALA-3536 Stress test crash: DCHECK in RuntimeProfile
-
- Resolved
-
-
IMPALA-3514 Deadlock between ReportExecStatus/Coordinator
-
- Resolved
-